Added Rss feeds and Advertisements

--- a/wp-content/themes/newses-child/ctc-style.css
+++ b/wp-content/themes/newses-child/ctc-style.css
@@ -12,6 +12,7 @@ Updated: 2021-12-22 06:05:21
 }
 .mg-latest-news .mg-latest-news-slider a{
   color: black;
+  font-weight: bold;
 }
 .mg-latest-news .mg-latest-news-slider a::before {
     color: white;
