--- a/wp-content/themes/newses-child/style.css
+++ b/wp-content/themes/newses-child/style.css
@@ -12,21 +12,13 @@ Version: 1.2.9.26.1640153118
 */
 
 .back-img {
-    /*
     background-color: #333;
     background-position: 50% 50%;
     background-repeat: no-repeat;
-	position: relative;
-	background-size: contain;
+    position: relative;
+    background-size: cover;
     overflow: hidden;
-    */
-
-    background-color: #333;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-	position: relative;
-	background-size: contain;
-    overflow: visible;
+    
 }
 
 .mg-latest-news-sec {
